plugins {
	id 'org.springframework.boot' version '2.6.3'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'java'
}

group = 'by.elmax19'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

repositories {
	mavenCentral()
}

ext {
	mapstructVersion = "1.4.2.Final"
}

dependencies {
	implementation("org.springframework.boot:spring-boot-starter")
	testImplementation("org.springframework.boot:spring-boot-starter-test")
	testImplementation("org.jeasy:easy-random-core:5.0.0")
	compileOnly("org.projectlombok:lombok:1.18.22")
	annotationProcessor("org.projectlombok:lombok:1.18.22")
	testImplementation("de.flapdoodle.embed:de.flapdoodle.embed.mongo")
	implementation("com.fasterxml.jackson.core:jackson-databind")
	implementation("org.springframework.boot:spring-boot-starter-data-mongodb")
	implementation("org.apache.commons:commons-lang3")
	implementation("org.springframework.boot:spring-boot-starter-web")
	implementation("javax.validation:validation-api")
	compileOnly("org.mapstruct:mapstruct:${mapstructVersion}")
	annotationProcessor("org.mapstruct:mapstruct-processor:${mapstructVersion}")
}

tasks.named('test') {
	useJUnitPlatform()
}
